# Ubik-Project

admin/src/pages/: staking.tsx
front-end/: package-lock.json  package.json
front-end/src/: App.tsx
front-end/src/components/: NftCard.tsx  StakedNftCard.tsx
front-end/src/pages/: home.tsx  nft_stake.tsx  token_stake.tsx
front-end/src/utils/: ProgramProvider.tsx  constants.ts  staking.json  token_staking.json  useProgram.ts
smart-contract/: Anchor.toml  Cargo.toml
smart-contract/staking/: Cargo.toml
smart-contract/staking/src/: lib.rs
smart-contract/token_staking/: Cargo.toml
smart-contract/token_staking/src/: lib.rs
